--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -8,7 +8,7 @@ $color-fourth   :#757575;
 /* responsive */
 
 $bp-medium:56.25em; //900px
-$bp-small :37.5em; //600px
+$bp-small :43.75em; //600px
 
 
 @mixin header-item-padding {
